Don't let dynamic slots shrink below numFixedSlots(), bug 613122. r=brendan